[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/tools/props/bgm_properties.gd" type="Script" id=2]
[ext_resource path="res://src/tools/props/bgm_prop.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/stop.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/pause.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/play.png" type="Texture" id=7]

[node name="BG Music" type="Spatial"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Properties" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -130.0
margin_right = 216.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Properties"
resizable = true
script = ExtResource( 2 )

[node name="Tabs" type="Tabs" parent="Properties"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -8.0

[node name="TabContainer" type="TabContainer" parent="Properties/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Music" type="Control" parent="Properties/Tabs/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Tree" type="Tree" parent="Properties/Tabs/TabContainer/Music"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -40.0
allow_reselect = true
hide_root = true

[node name="Button" type="Button" parent="Properties/Tabs/TabContainer/Music"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -32.0
text = "Play"
icon = ExtResource( 7 )

[node name="Button2" type="Button" parent="Properties/Tabs/TabContainer/Music"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -32.0
margin_right = -70.0
disabled = true
icon = ExtResource( 6 )
icon_align = 1

[node name="Button3" type="Button" parent="Properties/Tabs/TabContainer/Music"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -139.0
margin_top = -32.0
margin_right = -107.0
icon = ExtResource( 4 )
icon_align = 1

[connection signal="item_selected" from="Properties/Tabs/TabContainer/Music/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="pressed" from="Properties/Tabs/TabContainer/Music/Button" to="." method="_play_music"]
[connection signal="pressed" from="Properties/Tabs/TabContainer/Music/Button3" to="." method="_stop_music"]
